# uBITz

./: .gitignore  AI-ASSISTED-DEVELOPMENT.md  AI-STACK-RATIONALE.md  LICENSE.md  README.md  TRADEMARKS.md
.obsidian/: appearance.json  workspace.json
.obsidian/plugins/github-sync/: data.json
Engineering Diaries/: 2025-DEC-21-EngineeringDiary.md  2025-DEC-24-EngineeringDiary.md  2025-DEC-25-EngineeringDiary.md  2025-DEC-28-EngineeringDiary.md  2025-NOV-25-EngineeringDiary.md  2025-NOV-26-EngineeringDiary.md  2025-NOV-27-EngineeringDiary.md  2026-JAN-03-EngineeringDiary.md  README.md  μBITz Dock Digital Architecture - Done.md  μBITz LH0080B Host Architecture — Done.md  μBITz Power Architecture - Done.md
uBITz Platform Code/Dock/MCU/: CMakeLists.txt  partitions.csv  sdkconfig.old
uBITz Platform Code/Dock/MCU/main/: CMakeLists.txt  main.c
uBITz Platform Code/Dock/Schem/: esp32s3_gpio_assignments.md  (+3 more)
uBITz Platform Code/Host/: μBITz LH0080B Host System Architecture.md
uBITz Platform Spec/: 0- μBITz Platform Specification.md  0.0- μBITz Platform Specification.md  1.0- μBITz Dock Specification.md  1.1- Part 1 — Core Logical Specification.md  1.2- Part 2 — Parallel Profile.md  1.2- Part 2 — Serial Profile (Framed LVDS).md  1.3- Part 3 — Parallel Profile.md  1.3- Part 3 — Serial Profile (Framed LVDS).md  2.0- μBITz Host Specification.md  3.0- μBITz Bank Specification.md  4.0- μBITz Tile Base Specification.md  4.1- μBITz Versatile Tile Classes — Overview.md  4.2- µBITz VDP Tile Specification.md  4.3- µBITz Sound Processor Tile Specification.md
(+154 files in other folders)
